## ecu_interface.py

import logging
from typing import Dict, Any

class ECUInterface:
    def __init__(self):
        self.logger = logging.getLogger(__name__)
        logging.basicConfig(level=logging.INFO)

    def send_parameters(self, parameters: Dict[str, Any]) -> None:
        """
        Send the predicted parameters to the ECU.
        
        Args:
            parameters (dict): A dictionary containing the predicted parameters.
        """
        try:
            # Assuming we have a function send_to_ecu() to send parameters to the ECU.
            # This function is not implemented here as it's highly dependent on the specific ECU and communication protocol used.
            # send_to_ecu(parameters)
            self.logger.info(f"Parameters {parameters} sent to ECU successfully.")
        except Exception as e:
            self.logger.error(f"Error occurred while sending parameters to ECU: {e}")
