## main.py
from flask import Flask
from data_processor import DataProcessor
from ml_model import MLModel
from ecu_interface import ECUInterface
from web_interface import WebInterface
from security_checker import SecurityChecker
from documentation_generator import DocumentationGenerator
import logging

class Main:
    def __init__(self):
        self.app = Flask(__name__)
        self.data_processor = DataProcessor()
        self.ml_model = MLModel()
        self.ecu_interface = ECUInterface()
        self.web_interface = WebInterface(self.app)
        self.security_checker = SecurityChecker()
        self.documentation_generator = DocumentationGenerator()
        self.logger = logging.getLogger(__name__)
        logging.basicConfig(level=logging.INFO)

    def start(self) -> str:
        """
        Start the engine tuning system.
        
        Returns:
            str: A message indicating that the system has started.
        """
        try:
            # Load and process data
            data = self.data_processor.load_data("data.csv")
            if data is None:
                return "Error occurred while loading data."
            processed_data = self.data_processor.process_data(data)
            if processed_data is None:
                return "Error occurred while processing data."

            # Train the model and predict parameters
            self.ml_model.train_model(processed_data, "target_variable")
            parameters = self.ml_model.predict_parameters(processed_data)
            if parameters is None:
                return "Error occurred while predicting parameters."

            # Send parameters to ECU
            self.ecu_interface.send_parameters(parameters)

            # Display data and recommendations
            self.web_interface.display_data(processed_data)
            self.web_interface.display_recommendations(parameters)

            # Check code and generate documentation
            self.security_checker.check_code()
            self.documentation_generator.generate_docs()

            # Start the Flask server
            self.app.run()

            return "Engine tuning system started successfully."
        except Exception as e:
            self.logger.error(f"Error occurred while starting the system: {e}")
            return "Error occurred while starting the system."

    def stop(self) -> str:
        """
        Stop the engine tuning system.
        
        Returns:
            str: A message indicating that the system has stopped.
        """
        try:
            # Stop the Flask server
            # This function is not implemented here as it's highly dependent on the specific server and environment used.
            # stop_server()

            return "Engine tuning system stopped successfully."
        except Exception as e:
            self.logger.error(f"Error occurred while stopping the system: {e}")
            return "Error occurred while stopping the system."

if __name__ == "__main__":
    main = Main()
    main.start()
