## ml_model.py

from sklearn.ensemble import RandomForestRegressor
from typing import Dict, Union
import pandas as pd
import numpy as np
import logging

class MLModel:
    def __init__(self):
        self.model = RandomForestRegressor()
        self.logger = logging.getLogger(__name__)
        logging.basicConfig(level=logging.INFO)

    def train_model(self, data: pd.DataFrame, target_variable: str) -> None:
        """
        Train the machine learning model.
        
        Args:
            data (DataFrame): The processed data.
            target_variable (str): The name of the target variable in the DataFrame.
        """
        try:
            if target_variable not in data.columns:
                raise ValueError(f"Target variable {target_variable} not found in DataFrame")
            X = data.drop(target_variable, axis=1)
            y = data[target_variable]
            self.model.fit(X, y)
        except Exception as e:
            self.logger.error(f"Error occurred while training the model: {e}")

    def predict_parameters(self, data: pd.DataFrame) -> Union[Dict[str, float], None]:
        """
        Predict the optimal tuning parameters.
        
        Args:
            data (DataFrame): The processed data.
        
        Returns:
            dict: A dictionary containing the predicted parameters.
        """
        try:
            predictions = self.model.predict(data)
            parameters = { 'parameter_1': predictions[0], 'parameter_2': predictions[1] }
            return parameters
        except Exception as e:
            self.logger.error(f"Error occurred while predicting parameters: {e}")
            return None
